--- a/index.html
+++ b/index.html
@@ -1966,19 +1966,21 @@ You wake with a start. The digital premonition is gone, but the feeling of corru
 
 &lt;div class=&quot;start-menu&quot;&gt;
   &lt;button class=&quot;button&quot; data-passage=&quot;Day_2_Map&quot;&gt;Head to the Village (Day 2)&lt;/button&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="59" name="Start" tags="" position="100,25" size="100,100">&lt;&lt;script&gt;&gt;
-  $(&quot;body&quot;).addClass(&quot;start-screen&quot;);
-&lt;&lt;/script&gt;&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="59" name="Start" tags="" position="100,25" size="100,100">&lt;div style=&quot;display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; margin-top: 40px;&quot;&gt;
+  &lt;!-- Title and subtitle --&gt;
+  &lt;div&gt;
+    &lt;h1&gt;Murdered in Plain Text&lt;/h1&gt;
+    &lt;blockquote&gt;&lt;em&gt;The ASCII was clear, but the motive wasn&#39;t.&lt;/em&gt;&lt;/blockquote&gt;
+  &lt;/div&gt;
 
-!Murdered in Plain Text
-!!!!&lt;blockquote&gt;&lt;em&gt;The ASCII was clear, but the motive wasn&#39;t.&lt;/em&gt;&lt;/blockquote&gt;
+  &lt;!-- Start menu buttons --&gt;
+  &lt;div class=&quot;start-menu&quot; style=&quot;margin-top: 30px;&quot;&gt;
+    &lt;button class=&quot;button&quot; data-passage=&quot;Introducing&quot;&gt;Start&lt;/button&gt;
+    &lt;button class=&quot;button&quot; data-passage=&quot;Characters&quot;&gt;Characters&lt;/button&gt;
+  &lt;/div&gt;
 
-A digital preservation murder mystery.
-
-&lt;div class=&quot;start-menu&quot;&gt;
-  &lt;button class=&quot;button&quot; data-passage=&quot;Introducing&quot;&gt;Start&lt;/button&gt;
-  &lt;button class=&quot;button&quot; data-passage=&quot;Characters&quot;&gt;Characters&lt;/button&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="60" name="Start the game" tags="Story" position="350,25" size="100,100">Welcome, $player_name! Your reputation precedes you. The pages of &#39;The Daily E-Mail&#39; and &#39;The Checksum Chronicle&#39; are filled with your exploits: &quot;The Riddle of the Ghost in the Cloud Storage,&quot; &quot;The Mystery of the Misfiled Metadata,&quot; and, of course, your recent triumph in &quot;The Case of the Bit Rot Bandit.&quot;
+&lt;/div&gt;
+</tw-passagedata><tw-passagedata pid="60" name="Start the game" tags="Story" position="350,25" size="100,100">Welcome, $player_name! Your reputation precedes you. The pages of &#39;The Daily E-Mail&#39; and &#39;The Checksum Chronicle&#39; are filled with your exploits: &quot;The Riddle of the Ghost in the Cloud Storage,&quot; &quot;The Mystery of the Misfiled Metadata,&quot; and, of course, your recent triumph in &quot;The Case of the Bit Rot Bandit.&quot;
 
 Your skills are legendary. Now, they are needed.
 
