--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,7 @@ The files will endure while you drift into sleep.
 
   &lt;div class=&quot;start-menu&quot;&gt;
   &lt;button class=&quot;button&quot; data-passage=&quot;Day 1 Complete&quot;&gt;Start the day well-rested&lt;/button&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="58" name="Sleep Fitfully" tags="" position="200,1000" size="100,100">!Day 2
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="58" name="Sleep Fitfully!" tags="" position="200,1000" size="100,100">!Day 2
 
 You wake with a start. The digital premonition is gone, but the feeling of corrupted data remains. The clock on the bedside table blinks `404`. It&#39;s time to head out and investigate the suspects in Checksum-on-the-Wold.
 
