--- a/index.html
+++ b/index.html
@@ -842,20 +842,11 @@ Unbeknownst to you, you start to sleep walk out of the house and through the win
 
 &lt;p&gt;Where will you start your interrogation of the suspects? When you are done investigating the village, return to the manor to rest.&lt;/p&gt;
 
-
-
-
-
 &lt;div style=&quot;position: relative; display: inline-block;&quot;&gt;
-
-
 &lt;img src=&quot;https://raw.githubusercontent.com/Susanne404/Murdered-In-Plain-Text/main/Images/Village%20map.png&quot; alt=&quot;Map&quot; width=&quot;800&quot;&gt;
 
 
-
-
-
-   &lt;a data-passage=&quot;Explore the Tea Room&quot;
+&lt;a data-passage=&quot;Explore the Tea Room&quot;
 
 
 	   style=&quot;position: absolute;
@@ -962,7 +953,11 @@ Unbeknownst to you, you start to sleep walk out of the house and through the win
 	          display: block;&quot;&gt;
 	&lt;/a&gt;
 
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="Day_3_Intro" tags="" position="400,1500" size="100,100">After a fitful night&#39;s sleep, you wake knowing time is short. The police are expected today. Today is the day to find the true motive and the missing murder weapon. You feel a strange pulse in the manor—it seems some previously &#39;hidden&#39; directories have mounted themselves overnight.
+&lt;/div&gt;
+
+&lt;div class=&quot;start-menu&quot;&gt;
+    &lt;button class=&quot;button&quot; data-passage=&quot;Day 2 Complete&quot;&gt;Time for Bed&lt;/button&gt;
+    &lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="Day_3_Intro" tags="" position="400,1500" size="100,100">After a fitful night&#39;s sleep, you wake knowing time is short. The police are expected today. Today is the day to find the true motive and the missing murder weapon. You feel a strange pulse in the manor—it seems some previously &#39;hidden&#39; directories have mounted themselves overnight.
 
 &lt;div class=&quot;start-menu&quot;&gt;
     &lt;button class=&quot;button&quot; data-passage=&quot;Day_3_Map&quot;&gt;Review the Final Manor Map&lt;/button&gt;
